added main section structure

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Your Name - Portfolio</title>
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/about.css" />
   </head>
   <body>
     <header>
@@ -20,8 +20,19 @@
       </nav>
     </header>
 
-    <main>
-      <!-- Page content -->
+    <main class="container">
+      <section class="intro">
+        <img
+          src="images/your-photo.jpg"
+          alt="Your photo"
+          class="intro__photo"
+        />
+        <h2>Hello, I'm Nicholas Eaton</h2>
+        <p>
+          I'm an aspiring software engineer learning frontend and backend
+          technologies. This portfolio highlights my projects and progress.
+        </p>
+      </section>
     </main>
 
     <footer>
