--- a/project.html
+++ b/project.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Your Name - Portfolio</title>
+    <title>Nicholas Eaton - Portfolio</title>
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/about.css">
+    
   </head>
   <body>
     <header>
       <nav>
         <ul class="nav__list">
-          <h1>Nicholas Eaton</h1>
+          <li><h1 class="site-title">Nicholas Eaton</h1></li>
           <li><a href="index.html" class="nav__link">Home</a></li>
           <li><a href="projects.html" class="nav__link">Projects</a></li>
           <li><a href="about.html" class="nav__link">About</a></li>
@@ -20,12 +20,12 @@
       </nav>
     </header>
 
-    <main>
-      <!-- Page content -->
+    <main >
+     
     </main>
 
     <footer>
-      <p>&copy; 2025 Your Name</p>
+      <p>&copy; 2025 Nicholas Eaton</p>
     </footer>
   </body>
 </html>
