--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Your Name - Portfolio</title>
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/about.css">
+    
   </head>
   <body>
     <header>
@@ -13,7 +13,7 @@
         <ul class="nav__list">
           <h1>Nicholas Eaton</h1>
           <li><a href="index.html" class="nav__link">Home</a></li>
-          <li><a href="projects.html" class="nav__link">Projects</a></li>
+          <li><a href="project.html" class="nav__link">Projects</a></li>
           <li><a href="about.html" class="nav__link">About</a></li>
           <li><a href="contact.html" class="nav__link">Contact</a></li>
         </ul>
