--- a/project.html
+++ b/project.html
@@ -1,31 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nicholas Eaton - Portfolio</title>
-    <link rel="stylesheet" href="css/style.css" />
-    
-  </head>
-  <body>
-    <header>
-      <nav>
-        <ul class="nav__list">
-          <li><h1 class="site-title">Nicholas Eaton</h1></li>
-          <li><a href="index.html" class="nav__link">Home</a></li>
-          <li><a href="projects.html" class="nav__link">Projects</a></li>
-          <li><a href="about.html" class="nav__link">About</a></li>
-          <li><a href="contact.html" class="nav__link">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Projects - Nicholas Eaton</title>
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+<body>
+  <header>
+    <nav>
+      <ul class="nav__list">
+        <li><h1 class="site-title">Nicholas Eaton</h1></li>
+        <li><a href="index.html" class="nav__link">Home</a></li>
+        <li><a href="project.html" class="nav__link">Projects</a></li>
+        <li><a href="about.html" class="nav__link">About</a></li>
+        <li><a href="contact.html" class="nav__link">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <main >
-     
-    </main>
+  <main class="container">
+    <h2>My Projects</h2>
+    <section class="projects-grid">
+      <article class="project">
+        <img src="images/project1.jpg" alt="Project 1" class="project__image">
+        <div class="project__content">
+          <h3>News Website</h3>
+          <p>A responsive news website built with HTML and CSS Grid, featuring top stories, categories, and a sidebar.</p>
+          <a href="https://github.com/nchlseaton3/News-web-project.git" class="button">View Project</a>
+        </div>
+      </article>
 
-    <footer>
-      <p>&copy; 2025 Nicholas Eaton</p>
-    </footer>
-  </body>
+      <article class="project">
+        <img src="images/project2.jpg" alt="Project 2" class="project__image">
+        <div class="project__content">
+          <h3>Event Sign-up Sheet</h3>
+          <p>Built a simple event sign-up sheet for a Spooky Trunk-or-Treat car meet using HTML and CSS, demonstrating fundamental layout and styling skills.</p>
+          <a href="https://github.com/nchlseaton3/Event-sign-up-page.git" class="button">View Project</a>
+        </div>
+      </article>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Nicholas Eaton</p>
+  </footer>
+</body>
 </html>
