--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           I'm an aspiring software engineer learning frontend and backend
           technologies. This portfolio highlights my projects and progress.
         </p>
-                <a href="projects.html" class="button">My Projects</a>
+                <a href="project.html" class="button">My Projects</a>
 
       </section>
     </main>
