created contact me page

--- a/project.html
+++ b/project.html
@@ -18,16 +18,16 @@
       </ul>
     </nav>
   </header>
-
+   
   <main class="container">
-    <h2>My Projects</h2>
+    <li><h2 class="my-project">My Projects</h2></li>
     <section class="projects-grid">
       <article class="project">
         <img src="images/project1.jpg" alt="Project 1" class="project__image">
         <div class="project__content">
           <h3>News Website</h3>
           <p>A responsive news website built with HTML and CSS Grid, featuring top stories, categories, and a sidebar.</p>
-          <a href="https://github.com/nchlseaton3/News-web-project.git" class="button">View Project</a>
+          <a href="https://github.com/nchlseaton3/News-web-project.git" class="button">View on GitHub</a>
         </div>
       </article>
 
@@ -36,7 +36,7 @@
         <div class="project__content">
           <h3>Event Sign-up Sheet</h3>
           <p>Built a simple event sign-up sheet for a Spooky Trunk-or-Treat car meet using HTML and CSS, demonstrating fundamental layout and styling skills.</p>
-          <a href="https://github.com/nchlseaton3/Event-sign-up-page.git" class="button">View Project</a>
+          <a href="https://github.com/nchlseaton3/Event-sign-up-page.git" class="button">View on GitHub</a>
         </div>
       </article>
     </section>
