--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
         <ul class="nav__list">
           <h1>Nicholas Eaton</h1>
           <li><a href="index.html" class="nav__link">Home</a></li>
-          <li><a href="projects.html" class="nav__link">Projects</a></li>
+          <li><a href="project.html" class="nav__link">Projects</a></li>
           <li><a href="about.html" class="nav__link">About</a></li>
           <li><a href="contact.html" class="nav__link">Contact</a></li>
         </ul>
