--- a/contact.html
+++ b/contact.html
@@ -1,31 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Your Name - Portfolio</title>
-    <link rel="stylesheet" href="css/style.css" />
-    
-  </head>
-  <body>
-    <header>
-      <nav>
-        <ul class="nav__list">
-          <h1>Nicholas Eaton</h1>
-          <li><a href="index.html" class="nav__link">Home</a></li>
-          <li><a href="project.html" class="nav__link">Projects</a></li>
-          <li><a href="about.html" class="nav__link">About</a></li>
-          <li><a href="contact.html" class="nav__link">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Contact - Nicholas Eaton</title>
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+<body>
+  <header>
+    <nav>
+      <ul class="nav__list">
+        <li><h1 class="site-title">Nicholas Eaton</h1></li>
+        <li><a href="index.html" class="nav__link">Home</a></li>
+        <li><a href="projects.html" class="nav__link">Projects</a></li>
+        <li><a href="about.html" class="nav__link">About</a></li>
+        <li><a href="contact.html" class="nav__link">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <main>
-      <!-- Page content -->
-    </main>
+  <main class="container">
+    <section class="contact-me">
+      <h2>Get In Touch</h2>
 
-    <footer>
-      <p>&copy; 2025 Your Name</p>
-    </footer>
-  </body>
+      <!-- Contact Links -->
+      <p>Email: 
+        <a href="mailto:nchlseaton3@gmail.com">nchlseaton3@gmail.com</a>
+      </p>
+      <p>GitHub: 
+        <a href="https://github.com/nchlseaton3" target="_blank">github.com/nchlseaton3</a>
+      </p>
+      <p>LinkedIn: 
+        <a href="https://www.linkedin.com/in/nicholas-eaton-b868b032b/" target="_blank">linkedin.com/in/nicholas-eaton</a>
+      </p>
+
+      <!-- Contact Form -->
+      <form>
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required>
+
+        <label for="message">Message:</label>
+        <textarea id="message" name="message" rows="4" required></textarea>
+
+        <button type="submit" class="button">Send</button>
+      </form>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Nicholas Eaton</p>
+  </footer>
+</body>
 </html>
