added pic to intro and sscreenshots to my projects page

--- a/about.html
+++ b/about.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Your Name - Portfolio</title>
+    <title>About - Nicholas Eaton</title>
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/about.css" />
   </head>
   <body>
     <header>
       <nav>
         <ul class="nav__list">
-          <h1>Nicholas Eaton</h1>
+          <li><h1 class="site-title">Nicholas Eaton</h1></li>
           <li><a href="index.html" class="nav__link">Home</a></li>
           <li><a href="project.html" class="nav__link">Projects</a></li>
           <li><a href="about.html" class="nav__link">About</a></li>
@@ -20,12 +20,50 @@
       </nav>
     </header>
 
-    <main>
-      <!-- Page content -->
+    <main class="container">
+      <section class="about">
+        <h2>About Me</h2>
+        <img
+          src="images/your-photo.jpg"
+          alt="Nicholas Eaton"
+          class="intro__photo"
+        />
+
+        <p>
+          Hi, I'm <strong>Nicholas Eaton</strong>, an aspiring software engineer
+          passionate about building clean, user-friendly websites and
+          applications. I'm currently learning frontend and backend
+          technologies, and I enjoy working on both technical problem solving
+          and creative design.
+        </p>
+
+        <h3>Skills</h3>
+        <ul class="skills-list">
+          <li>HTML5, CSS3, JavaScript</li>
+          <li>React, Bootstrap, Tailwind</li>
+          <li>Python, Flask, SQL</li>
+          <li>API Development, Firebase</li>
+        </ul>
+
+        <h3>Background</h3>
+        <p>
+          I currently work as a mobile transport refrigeration technician, but
+          I’m transitioning into software engineering. My hands-on experience
+          troubleshooting and problem-solving in the field gives me a unique
+          perspective and determination as I learn coding.
+        </p>
+
+        <h3>Interests</h3>
+        <p>
+          Outside of coding, I enjoy working on cars, spending time with family
+          and friends, and exploring new technology. I’m always eager to learn
+          and grow.
+        </p>
+      </section>
     </main>
 
     <footer>
-      <p>&copy; 2025 Your Name</p>
+      <p>&copy; 2025 Nicholas Eaton</p>
     </footer>
   </body>
 </html>
