--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main class="container">
       <section class="intro">
         <img
-          src="images/your-photo.jpg"
+          src="images.assets/rainyroad.jpg"
           alt="Pic of Me"
           class="intro__photo"
         />
