--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
       <section class="about">
         <h2>About Me</h2>
         <img
-          src="images/your-photo.jpg"
+          src="images.assets/rainyroad.jpg"
           alt="Nicholas Eaton"
           class="intro__photo"
         />
@@ -48,7 +48,7 @@
         <h3>Background</h3>
         <p>
           I currently work as a mobile transport refrigeration technician, but
-          I’m transitioning into software engineering. My hands-on experience
+          I'm transitioning into software engineering. My hands-on experience
           troubleshooting and problem-solving in the field gives me a unique
           perspective and determination as I learn coding.
         </p>
@@ -56,7 +56,7 @@
         <h3>Interests</h3>
         <p>
           Outside of coding, I enjoy working on cars, spending time with family
-          and friends, and exploring new technology. I’m always eager to learn
+          and friends, and exploring new technology. I'm always eager to learn
           and grow.
         </p>
       </section>
